# xstat

./: README.md  pyproject.toml  setup.py
autostat/: __init__.py  constants.py  django_stat.py  flask_stat.py  log.py  maple_stat.py  stat_adapter.py
examples/django_demo/mysite/: settings.py  urls.py
examples/django_demo/test_stat/: views.py
examples/flask_demo/: main.py  user.py
examples/maple_demo/: client.py  user.py  worker.py
webstat/: __init__.py  django_stat.py  flask_stat.py  log.py  stat_adapter.py  utils.py
xstat/: __init__.py  constants.py  django_stat.py  flask_stat.py  log.py  maple_stat.py  utils.py
