[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xstat"
version = "0.2.6"
authors = [{name = "dantezhu", email = "dantezhu@qq.com"}]
license = {text = "MIT"}
description = "make statsd work with flask, django, maple or other server"
urls = {Homepage = "https://github.com/dantezhu/xstat"}
dependencies = ["statsd"]

[tool.setuptools]
script-files = []
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["ez_setup"] # examples; tests
namespaces = false
